# apiary

./: .gitignore  AGENT_PRIMER.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION.md  FOR_ANDREAS_AGENT.md  README.md  pyproject.toml
apiary_auditors/: __init__.py  llm_audit.py
apiary_auditors/criteria/: default-criteria.md
apiary_cache/: __init__.py  seed.py
apiary_policy/: __init__.py  checksums.py  environments.py  rules.py  source_match.py
apiary_proxy/: __init__.py  cache_lru.py  composer_registry.py  npm_registry.py  proxy.py  pypi_registry.py  registry.py
apiary_quarantine/: __init__.py  workflow.py
apiary_quarantine/templates/: control-evidence-memo.md.j2
apiary_train/: __init__.py  abliteration.py  agentic_format_builder.py  andreas_data_adapter.py  data_prep.py  datadog_adapter.py  eval.py  ossv_adapter.py  raw_format_builder.py  rehearsal.py  scraped_case_adapter.py  sft_config_deepseek.yaml  sft_config_glm.yaml  sft_lora.py  version_pair_extractor.py
bumblebee_bridge/: __init__.py  ingest.py  smoke.py  smoke.sh
data/: README.md
data/patterns/: __init__.py  attack-catalog.yaml  injector.py
data/sft/: ghsa-cases-v1-train.jsonl
demo/: live_demo.sh  prestage_allowlist.py  prestage_allowlist.sh  record_backup.sh  run_incident_replay.py  seed_packages.txt  slides_outline.md  test_incident_replay.py
demo/incidents/: MALICIOUS_DATA_DO_NOT_INSTALL.txt
demo/incidents/ctx-0.2.2/: README.md  setup.py
demo/incidents/expected-outputs/: lodash-4.17.21.json  lodash-4.17.21.memo.md  postmark-mcp-1.0.12.json  postmark-mcp-1.0.12.memo.md  postmark-mcp-1.0.16.json  postmark-mcp-1.0.16.memo.md
demo/incidents/lodash-4.17.21/: README.md  index.js  package.json
demo/incidents/postmark-mcp-1.0.12/: README.md  index.js  package.json
demo/incidents/postmark-mcp-1.0.16/: README.md  index.js  package.json  postinstall.js
demo/outputs/: lodash-4.17.21__2026-05-27.md  lodash-4.17.21__2026-05-28.md  postmark-mcp-1.0.12__2026-05-27.md  postmark-mcp-1.0.12__2026-05-28.md  postmark-mcp-1.0.16__2026-05-27.md  postmark-mcp-1.0.16__2026-05-28.md
docs/: CAPABILITY_MATRIX.md  ENHANCE_MODULEWARDEN.md  SUBMIT_APIARY.md
modulewarden_gate/: __init__.py  gate.py  thresholds.yaml
pitch/: README.md  andreas-data-integration.md  andreas-plan-analysis.md  demo-runbook.md  preflight-checklist.md  q-and-a-prep.md  release-notes-v2.0.0.md  slide-deck.md  track-reframes.md  video-script.md  whatsapp-andreas-consolidation.md  whatsapp-to-andreas.md
quarantine/: policy.json
quarantine/notes/: README.md  axios@1.6.2.md  axios@1.6.7.md  express@4.18.2.md  lodash@4.17.21.md  moment@2.29.4.md  postmark-mcp@1.0.12.md  react@18.2.0.md  typescript@5.3.3.md
scripts/: build_dataset.py  build_eval_matrix.py  download_figshare.py  eval.py  extract_features.py  extract_version_pairs.py  fetch_andreas_data.py  fetch_benign_corpus.py  fetch_datadog_dataset.py  fetch_ossf_malicious_packages.py  preprocess.py  score_package.py  train_codebert.py  train_xgb_fallback.py
shared/: __init__.py  types.py
slurm/: abliterate_then_sft.slurm  train.slurm
tests/: test_andreas_adapter.py  test_cache_lru.py  test_environments.py  test_preprocess_labels.py  test_source_match.py
