[project]
name = "apiary"
version = "0.1.0"
description = "ModuleWarden gate for NPM supply chain"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    # Modeling
    "torch>=2.4",
    "transformers>=4.45",
    "peft>=0.13",
    "accelerate>=0.34",
    "datasets>=3.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "mapie>=0.9",
    # Data pipeline
    "huggingface-hub>=0.24",
    "tqdm>=4.66",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17.0",
    # NPM tarball + JS parsing
    "esprima>=4.0",
    "requests>=2.32",
    "httpx>=0.27",
    "aiofiles>=24.0",
    # Gate + proxy
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    # Evaluation
    "matplotlib>=3.9",
    # Demo niceties
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
moduleward-score = "scripts.score_package:main"
moduleward-bridge = "bumblebee_bridge.ingest:main"
apiary-proxy = "apiary_proxy.proxy:main"
apiary-cache-seed = "apiary_cache.seed:main"
apiary-quarantine = "apiary_quarantine.workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "modulewarden_gate",
    "bumblebee_bridge",
    "apiary_proxy",
    "apiary_policy",
    "apiary_quarantine",
    "apiary_auditors",
    "apiary_cache",
]

[tool.hatch.build.targets.wheel.force-include]
"apiary_quarantine/templates" = "apiary_quarantine/templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
